# storybro

./: .gitignore  Dockerfile  Install_Instructions.txt  Install_choco.bat  Install_win.bat  OpenShell.bat  README.md  default.nix  official_v5.torrent  pyproject.toml  setup.cfg  setup.py  shell.nix
etc/: Storybro.ipynb
storybro/: __init__.py  models.py  registry.py  utils.py
storybro/cli/: __init__.py  config.py
storybro/cli/commands/: play.py
storybro/cli/commands/models/: __init__.py  delete.py  flatten.py  get.py  list.py
storybro/cli/commands/stories/: __init__.py  delete.py  list.py
storybro/data/: splash.txt  story_data.yaml
storybro/data/grammars/: apocalyptic.json  fantasy.json
storybro/generation/gpt2/: encoder.py  generator.py  model.py  sample.py
storybro/models/: manager.py  model.py  registry.py
storybro/play/: __init__.py  block_formatter.py  player.py  settings.py
storybro/stories/: block.py  manager.py  story.py
storybro/story/: grammars.py  prompt_creator.py  story_manager.py  utils.py
storybro/transcripts/: manager.py  transcript.py
